# SimpleRaytracer

./: .gitmodules  CMakeLists.txt  main.cpp
Raytracer/: CMakeLists.txt  Defs.h  Hittable.h  Interval.h  Material.h  Plane.h  Ray.h  RayCamera.h  Scene.h  Sphere.h  raytracer.h  rt_util.cpp  rt_util.h
dependencies/math3d/: Defs.h  Matrix4.h  Vector3.h  Vector4.h  math3D.lib
raytracer/: Ray.h
